# komunitin_lite_qt

./: CMakeLists.txt  README.md  account.cpp  account.h  komunitin_lite_qt5.pro  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netservices.cpp  netservices.h  oauth2.cpp  oauth2.h  transfer.cpp  transfer.h  transferdialog.h  transferdialog.ui
.github/workflows/: create_release.yml
src/: account.cpp  account.h  backend.cpp  backend.h  kstatemachine.cpp  kstatemachine.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netservices.cpp  netservices.h  oauth2.cpp  oauth2.h  transfer.cpp  transfer.h  transferdialog.cpp  transferdialog.h  transferdialog.ui
src/qml/: LoginDialog.qml  TransferDialog.qml  main.qml  qml.qrc
svg/: icons.qrc
ts/: komunitin_lite_ca_ES.qm  komunitin_lite_ca_ES.ts  komunitin_lite_qt_ca_ES.qm  komunitin_lite_qt_ca_ES.ts
